CSS fix: text left alignment in je-containers

--- a/app/styles/angular-jsoneditor.css
+++ b/app/styles/angular-jsoneditor.css
@@ -17,6 +17,7 @@
 .je-container {
     height: 300px;
     border: solid 1px #aaa;
+    text-align: left;
 }
 
 .je-ace, .je-ace textarea,
